etc/iptables.conf
*nat
:PREROUTING  ACCEPT [0:0]
:INPUT       ACCEPT [0:0]
:OUTPUT      ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth1 -j SNAT --to <IP>
COMMIT

*filter
:INPUT   DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT  DROP [0:0]
-A INPUT   -i eth0 -p udp   --dport 67                  -j ACCEPT
-A INPUT           -p icmp  --icmp-type 8               -j ACCEPT
-A INPUT           -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT          -p icmp  --icmp-type 8               -j ACCEPT
-A OUTPUT          -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i eth0 -d 10.0.0.0/8                        -j REJECT
-A FORWARD -i eth0 -d 169.254.0.0/16                    -j REJECT
-A FORWARD -i eth0 -d 172.16.0.0/12                     -j REJECT
-A FORWARD -i eth0 -d 192.168.0.0/16                    -j REJECT
-A FORWARD -i eth0                                      -j ACCEPT
-A FORWARD -i eth1 -m state --state ESTABLISHED,RELATED -j ACCEPT
COMMIT
